Closed Bug 98469 Opened 24 years ago Closed 24 years ago

window targeting to _content does not always work.

Categories

(Core :: DOM: Navigation, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9.5

People

(Reporter: rpotts, Assigned: rpotts)

References

Details

(Whiteboard: PDT+)

Attachments

(1 file)

XUL uses a special window target called "_content" as a means of targeting the closest 'non-chrome' window. It turns out that if no 'non-chrome' windows are available then the URI load simply fails. The correct behavior would be to open up a new browser window and target its content area.
r=jst@netscape.com (he really said so)
Comment on attachment 48394 [details] [diff] [review] patch to nsDocShell.cpp r=pavlov
Attachment #48394 - Flags: review+
Attachment #48394 - Flags: superreview+
patch checked into the trunk.
Target Milestone: --- → mozilla0.9.4
Nominating for PDT consideration...
Whiteboard: PDT
Keywords: nsbranch
Blocks: 99194
Marking as nsbranch+ to nominate to the PDT for a PDT+.
Keywords: nsbranchnsbranch+
0.9.4 is out the door.
Target Milestone: mozilla0.9.4 → mozilla0.9.5
PDT+. Pls check it in by 3 am.
Whiteboard: PDT → PDT+
the patch is now checked into the 0.9.4 branch.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
mdunn - can you help to verify this?
QA Contact: adamlock → mdunn
Ashish Please verify as fixed
QA Contact: mdunn → ashishbhatt
Verified
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: