bug #98469 (r=pavlov, sr=jst).  Using the _content window target sometimes fails...